[MCUX-73241] Moved GPIO driver to bypass name conflict
[Status]
- Bypass the GPIO driver file name conflict. For the project without
  using CMSIS GPIO, this file will not be included.

Signed-off-by: Ruijia Wang <ruijia.wang@nxp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1121,13 +1121,13 @@ endif()
 if (CONFIG_MCUX_COMPONENT_CMSIS_Driver_Include.GPIO)
     mcux_add_source(
         SOURCES
-            Driver/Include/Driver_GPIO.h
+            Driver/Include/GPIO/Driver_GPIO.h
             Driver/Include/Driver_Common.h
     )
 
     mcux_add_include(
         INCLUDES
-            Driver/Include
+            Driver/Include/GPIO
     )
 
 endif()
