MCUX-73241[GPIO] Fix CMSIS GPIO driver build fail
 - Add the required include path

Signed-off-by: Jason Yu <zejiang.yu@nxp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1128,6 +1128,7 @@ if (CONFIG_MCUX_COMPONENT_CMSIS_Driver_Include.GPIO)
     mcux_add_include(
         INCLUDES
             Driver/Include/GPIO
+            Driver/Include
     )
 
 endif()
